# section_managment_system

./: .coverage  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
tactical_server/: Dict_convert.py  Forms_section.py  LatLong_to_OS.py  SectionDB.py  __init__.py  models.py  routes.py  section_db.py
tactical_server/convert_to_dict/: __init__.py  convert_to_dict.py
tactical_server/forms_section/: __init__.py
tactical_server/heart_rate/: forms.py  views.py
tactical_server/location/: forms.py  views.py
tactical_server/sections/: convert_to_dict.py  forms.py  lat_long_to_grid_reference.py  views.py
tactical_server/soldiers/: forms.py  views.py
tactical_server/templates/: SectionOverview.html  ViewHeart.html  add-amunition.html  add.html  base.html  delete.html  deleteSection.html  index.html  list-heart-rate.html  list-location.html  list.html  listLocation.html  newSection.html  view-location.html
tests/tactical_server/: conftest.py
tests/tactical_server/convert_to_dict/: test_convert_to_dict.py
wearable_sensors/BodyArmour_Sensor/: BodyArmour_Sensor_Final-25-3-20.ino
wearable_sensors/ESP32_SensorHub/: ESP32_SensorHub_rev3_Final-25-3-20.ino
wearable_sensors/ESP_BodyArmour/: ESP_BodyArmour_Final_25-3-20.ino
wearable_sensors/ESP_rifle/: ESP_rifle_Final_25-3-20.ino
wearable_sensors/Rifle_Sensor/: Bat_level.cpp  Rifle_Sensor_Final_25-3-20.ino
wearable_sensors/Sensor_hub/: Bat_level.cpp  Bat_level.h  Coms.cpp  Coms.h  ID.cpp  ID.h  Sensor_hub_Final_25-3-20.ino  my_gps.cpp  my_gps.h  my_heartrate.cpp  my_heartrate.h
(+11 files in other folders)
