[tool.poetry]
name = "section-monitoring-system"
version = "0.1.0"
description = "Refactoring my 3rd year project section_managment_system"
authors = ["the-Tiege"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"
geopy = "^2.4.1"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "^3.1.1"
wtforms = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
