[tool.poetry]
name = "tactical_server"
version = "0.1.0"
description = "Refactoring my 3rd year project section_managment_system"
authors = ["the-Tiege"]
readme = "README.md"
packages = [
    { include = "convert_to_dict", from = "tactical_server"},
    { include = "forms_section", from = "tactical_server"},
    { include = "lat_long_to_grid_reference", from = "tactical_server"}
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"
geopy = "^2.4.1"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "^3.1.1"
wtforms = "^3.1.1"
flask-wtf = "^1.2.1"
isort = "^5.13.2"
pylint = "^3.0.3"
pytest = "^7.4.3"
coverage = "^7.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
